general page, words pages, v1.0

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "static-site-boilerplate",
   "version": "1.0.0",
-  "author": "Zakhar Day",
+  "author": "Zakhar Day, Anna Komkova",
   "license": "MIT",
   "repository": {
     "type": "git",
